--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <main>
-    <a class="link" href="">
+    <a class="link" href="/before">
       <img src="./img/before-optimization.webp" alt="before optimization" />
       <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
         viewBox="0 0 234.6 61.3" preserveAspectRatio="none" xml:space="preserve">
