--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="logo-box">
       <img src="./img/Logo.webp" alt="logo" class="logo" />
     </div>
-    <a class="link" href="">
+    <a class="link" href="/after">
       <img src="./img/after-optimization.webp" alt="after optimization" />
       <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
         viewBox="0 0 234.6 61.3" preserveAspectRatio="none" xml:space="preserve">
